# jupyter-deploy

./: .gitignore  .readthedocs.yaml  .yamllint  AGENT.md  CLAUDE.md  CONTRIBUTING.md  README.md  conftest.py  docker-compose.yml  env.example  justfile  pyproject.toml
.github/: AGENT.md  Dockerfile.e2e  SETUP.md
.github/actions/install-uv/: action.yml
.github/e2e-base/: Dockerfile  pyproject.canary.toml  pyproject.release.toml
.github/e2e-cli/: Dockerfile  pyproject.aws.toml  pyproject.bare.toml
.github/utils/: get_modified_dirs.py
.github/workflows/: ci.yml  e2e-base-canary.yml  e2e-base-fresh.yml  e2e-base-job.yml  e2e-base-release.yml  e2e-base.yml  e2e-build-image.yml  e2e-cli.yml  e2e-eks-oidc-fresh.yml  e2e-eks-oidc-job.yml  e2e-eks-oidc.yml  lint-tf.yml  lint.yml  pr-e2e-base-fresh.yml  pr-e2e-base.yml  release-base.yml  release-cli.yml  release-eks-oidc.yml  release-plugin.yml  release.yml  test.yml
diagrams/: AGENT.md
diagrams/aws-base-template/: auth-flow.d2  containers.d2  overview.d2
diagrams/aws-eks-oidc-template/: application-image.d2  auth-flow.d2  infrastructure.d2  overview-access-workspace.d2  overview-manage-workspace.d2  platform-components.d2
diagrams/shared/icons/: ATTRIBUTION.md
docs/: AGENT.md  requirements.txt
docs/source/: conf.py  index.md
docs/source/_ext/: cli_bridge.py
docs/source/_static/css/: custom.css
docs/source/cli/: index.md
docs/source/cli-reference/: index.md
docs/source/getting-started/: index.md
docs/source/reference/: access-commands.md  overview.md  project-commands.md  resource-commands.md  store-commands.md
docs/source/reference/access/: organization.md  teams.md  users.md
docs/source/reference/project/: config.md  down.md  health.md  history.md  init.md  open.md  show.md  up.md
docs/source/reference/resource/: cluster.md  component.md  host.md  image.md  server.md
docs/source/reference/store/: projects.md
docs/source/templates/: index.md
docs/source/templates/aws-base-template/: architecture.md  details.md  index.md  prerequisites.md  user-guide.md
docs/source/templates/aws-eks-oidc-template/: architecture.md  details.md  index.md  prerequisites.md  user-guide.md
libs/jupyter-deploy/: README.md  pyproject.toml
libs/jupyter-deploy-tf-aws-ec2-base/: README.md  pyproject.toml
libs/jupyter-deploy-tf-aws-ec2-base/jupyter_deploy_tf_aws_ec2_base/: __init__.py
libs/jupyter-deploy-tf-aws-ec2-base/jupyter_deploy_tf_aws_ec2_base/template/: AGENT.md.template  TROUBLESHOOT.md  cloudinit.sh.tftpl  defaults-all.tfvars  docker-compose.yml.tftpl  docker-startup.sh.tftpl  logrotator-start.sh.tftpl  main.tf  manifest.yaml  outputs.tf  update-auth.sh  update_users.sh  variables.tf  variables.yaml
libs/jupyter-deploy-tf-aws-ec2-base/tests/e2e/: .env.base.example  conftest.py  constants.py  design.md  env.test.example  test_application.py  test_config_apply.py  test_config_interactive.py  test_config_set.py  test_configuration.py  test_deployment.py  test_external_volumes.py  test_gpu.py  test_history.py  test_host.py  test_open.py  test_org_and_teams.py  test_pixi.py  test_projects.py  test_server.py  test_show.py  test_undeployed_project.py  test_users.py  test_utils.py  test_uv.py
libs/jupyter-deploy-tf-aws-ec2-base/tests/unit/: test_base_template.py  test_docs_consistency.py  test_manifest_yaml.py  test_variables_yaml.py  test_version.py
libs/jupyter-deploy-tf-aws-ec2-ngrok/: pyproject.toml
libs/jupyter-deploy-tf-aws-ec2-traefik/: pyproject.toml
libs/jupyter-deploy-tf-aws-eks-base/: README.md  pyproject.toml
libs/jupyter-deploy-tf-aws-eks-base/jupyter_deploy_tf_aws_eks_base/: __init__.py  template.py
libs/jupyter-deploy-tf-aws-eks-oidc/: README.md  pyproject.toml
libs/jupyter-deploy-tf-aws-eks-oidc/jupyter_deploy_tf_aws_eks_oidc/: __init__.py
libs/jupyter-deploy-tf-aws-eks-oidc/jupyter_deploy_tf_aws_eks_oidc/template/applications/jupyterlab/: jupyter_server_config.py  pyproject.toml
libs/jupyter-deploy/jupyter_deploy/: cmd_history.py  cmd_utils.py  constants.py  enum.py  exceptions.py  fs_utils.py  manifest.py  prompt_handler.py  store_config.py  template_utils.py  variables_config.py  verify_utils.py
libs/jupyter-infra-tf-aws-iam-ci/: README.md  pyproject.toml
libs/jupyter-infra-tf-aws-iam-ci/jupyter_infra_tf_aws_iam_ci/: __init__.py  template.py
libs/pytest-jupyter-deploy/: README.md  pyproject.toml
libs/pytest-jupyter-deploy/pytest_jupyter_deploy/: __init__.py  cli.py  commands.py  constants.py  deployment.py  files.py  fs_utils.py  notebook.py  plugin.py  suite_config.py  undeployed_project.py
libs/pytest-jupyter-deploy/pytest_jupyter_deploy/image/: Dockerfile  __init__.py  docker-compose.yml
libs/pytest-jupyter-deploy/pytest_jupyter_deploy/kubernetes/: ballast-pod.yaml  ballast.py  deployments.py  kubectl.py  nodes.py  rbac.py
libs/pytest-jupyter-deploy/pytest_jupyter_deploy/notebooks/: __init__.py  notebook_utils.py  remediation_strategy.py
libs/pytest-jupyter-deploy/pytest_jupyter_deploy/oauth2_proxy/: __init__.py  ci_credentials.py  dex.py  github.py
libs/pytest-jupyter-deploy/pytest_jupyter_deploy/terraform/: utils.py
libs/pytest-jupyter-deploy/pytest_jupyter_deploy/workspaces/: kubectl.py  network_probe.py  web_app.py
libs/pytest-jupyter-deploy/tests/: __init__.py  conftest.py  test_ci_credentials.py  test_deployments.py  test_github_oauth.py  test_kubectl.py  test_network_probe.py  test_nodes.py  test_plugin.py  test_rbac.py
scripts/: auth_bot_secret.py  ci_helpers.py  ci_restore.py  ci_restore_base.py  ci_restore_eks.py  config_base_from_ci.py  env_setup_base.py  env_setup_eks.py  find_takedown_base.py  find_takedown_eks.py  generate_cli_ref.py  github_auth_setup.py  sync_auth_state.py  update_version.py  upgrade_base_template_version.py  upgrade_eks_oidc_template_version.py  verify_docs.py  verify_format.py
src/jupyter_deploy/: fs_utils.py
src/jupyter_deploy/cli/: deploy_app.py  terraform_app.py
src/jupyter_deploy/presets/: README.md  path.py
tests/unit/: test_fs_utils.py
tests/unit/cli/: test_terraform_app.py
(+415 files in other folders)
