[project]
name = "jupyter-deploy-monorepo"
version = "0.1.0"
description = "Monorepo for Jupyter deployment packages"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "decorator>=5.2.1",
    "jupyter-deploy",
    "pydantic>=2.11.5",
    "python-hcl2>=7.2.1",
]

[tool.uv.sources]
jupyter-deploy = { workspace = true }

[tool.uv.workspace]
members = [
    "libs/jupyter-deploy",
    "libs/jupyter-deploy-tf-aws-ec2-ngrok",
    "libs/jupyter-deploy-tf-aws-ec2-traefik",
    "images/uvbase"
]

[tool.uv]
dev-dependencies = [
    "jupyter_core>=5.0.0",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.8",
    "typer>=0.15.4",
    "rich>=10.11.0",
    "parameterized>=0.9.0",
]

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
files = [
    "libs/jupyter-deploy",
    "libs/jupyter-deploy-tf-aws-ec2-ngrok",
    "libs/jupyter-deploy-tf-aws-ec2-traefik"
]

[tool.pytest.ini_options]
pythonpath = [
  "libs/jupyter-deploy",
  "libs/jupyter-deploy-tf-aws-ec2-ngrok",
  "libs/jupyter-deploy-tf-aws-ec2-traefik"
]
