[project]
name = "jupyter-deploy-monorepo"
version = "0.2.3"
description = "Monorepo for Jupyter deploy packages"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter-deploy[aws]",
]

[tool.uv.sources]
jupyter-deploy = { workspace = true }

[tool.uv.workspace]
members = [
    "libs/jupyter-deploy",
    "libs/jupyter-deploy-tf-aws-ec2-base",
    "images/uvbase"
]

[tool.uv]
dev-dependencies = [
    "jupyter_core>=5.0.0",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.8",
    "typer>=0.15.4",
    "rich>=10.11.0",
    "parameterized>=0.9.0",
    "tomli-w>=1.2.0",
]

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
files = [
    "libs/jupyter-deploy",
    "libs/jupyter-deploy-tf-aws-ec2-base"
]

[tool.pytest.ini_options]
pythonpath = [
  "libs/jupyter-deploy",
  "libs/jupyter-deploy-tf-aws-ec2-base"
]
