[project]
name = "jupyter-deploy-monorepo"
version = "0.4.1"
description = "Monorepo for Jupyter deploy packages"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter-deploy[aws]",
]

[tool.uv.sources]
jupyter-deploy = { workspace = true }
pytest-jupyter-deploy = { workspace = true }

[tool.uv.workspace]
members = [
    "libs/jupyter-deploy",
    "libs/jupyter-deploy-tf-aws-ec2-base",
    "libs/pytest-jupyter-deploy",
    "images/uvbase"
]

[tool.ruff]
line-length = 120

[tool.uv]
dev-dependencies = [
    "jupyter_core>=5.0.0",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "pytest-jupyter-deploy",
    "pytest-playwright>=0.6.2",
    "ruff>=0.11.8",
    "typer>=0.15.4",
    "rich>=10.11.0",
    "parameterized>=0.9.0",
    "tomli-w>=1.2.0",
]

[tool.ruff.lint]
preview = true
select = [
    "E",  # pycodestyle
    "F",  # pyflakes
    "UP",  # pyupgrade
    "B",  # flake8-bugbear
    "SIM",  # flake8-simplify
    "I",  # isort
    "PLC0415",  # import-outside-toplevel - disallow lazy imports
]
ignore = [
    # Ignore other preview rules we're not ready for yet
    "UP042",  # Replace str/Enum with StrEnum (Python 3.11+)
    "UP046",  # Use PEP 695 type parameters (Python 3.12+)
    "UP047",  # Use PEP 695 type parameters for functions (Python 3.12+)
]

[tool.ruff.lint.per-file-ignores]
# Allow lazy imports in provider factory (handles optional dependencies)
"**/provider/instruction_runner_factory.py" = ["PLC0415"]
# GitHub utility scripts - allow simpler code patterns
".github/**/*.py" = ["SIM108"]

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
plugins = ["pydantic.mypy"]
files = [
    "libs/jupyter-deploy",
    "libs/jupyter-deploy-tf-aws-ec2-base",
    "libs/pytest-jupyter-deploy"
]

[tool.pytest.ini_options]
pythonpath = [
  "libs/jupyter-deploy",
  "libs/jupyter-deploy-tf-aws-ec2-base",
  "libs/pytest-jupyter-deploy"
]
markers = [
  "e2e: marks tests as end-to-end tests (deselect with '-m \"not e2e\"')"
]
addopts = "-m 'not e2e'"
